correct sonar issues