@@ -7,7 +7,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -18,9 +17,14 @@ public class XmlFileParser {
         if(!Files.isDirectory(rootPath)) {
             return new ArrayList<>();
         }
-        Stream<Path> files = Files.list(rootPath);
-        return files
-                .filter(file -> Files.isRegularFile(file))
-                .collect(Collectors.toList());
+        try (Stream<Path> files = Files.list(rootPath)) {
+            return files
+                    .filter(Files::isRegularFile)
+                    .toList();
+        }
+    }
+
+    public boolean isXml (Path file) {
+        return true;
     }
 }
